--- a/package.json
+++ b/package.json
@@ -16,35 +16,35 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
-    "@nativescript/angular": "^15.0.0",
+    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
+    "@nativescript/angular": "^16.0.0",
     "@nativescript/core": "~8.5.0",
     "@nativescript/plugin-tools": "5.1.0",
     "@nativescript/tailwind": "^2.0.1",
     "@nativescript/types": "~8.5.0",
     "@nativescript/webpack": "~5.0.5",
-    "@ngtools/webpack": "^15.0.0",
+    "@ngtools/webpack": "^16.0.0",
     "@types/react": "^16.14.34",
     "@types/uuid": "^9.0.1",
     "husky": "^8.0.0",
     "nativescript-vue": "~2.9.0",
     "nativescript-vue-template-compiler": "~2.9.0",
-    "ng-packagr": "^15.0.0",
+    "ng-packagr": "^16.0.0",
     "react-nativescript": "4.0.0",
     "rxjs": "~7.8.0",
     "svelte": "3.55.0",
     "svelte-native": "~1.0.5",
     "tailwindcss": "^3.3.2",
-    "typescript": "~4.9.0",
+    "typescript": "^5.0.0",
     "vue": "~2.6.14",
     "zone.js": "~0.13.0"
   },
